--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ repositories {
 }
 
 dependencies {
-	compile 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.2.0-SNAPSHOT'
+	compile 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.2.1'
 }
 
 task startServer(type: JavaExec) {
